# glacier-settings-accounts

./: CMakeLists.txt  transifex.yml
plugins/: accounts.json
providers/: CMakeLists.txt
providers/email/: email.qml
providers/google/: CMakeLists.txt  google.provider
providers/google/qml/: google.qml
providers/google/src/: CMakeLists.txt  googleauth.cpp  googleauth.h  plugin.cpp  qmldir
providers/jabber/: CMakeLists.txt
providers/jabber/qml/: jabber.qml
qml/plugins/accounts/: CreateAccountSheet.qml  accounts.qml
qml/plugins/accounts/providers/: GenericProvider.qml  email.qml  jabber.qml
translations/: glacier-settings-accounts.ts  glacier-settings-accounts_cs.ts
